# fluid-simulation

./: Cargo.toml
src/: app.rs  constants.rs  main.rs  simulation.rs  state.rs
src/pipelines/: compute.rs  render.rs
src/shaders/: physics.wgsl  radix_sort.wgsl  shader.wgsl
